@@ -1,4 +1,5 @@
--Xms512m
--Xmx2g
+-Xms1g
+-Xmx4g
 -XX:+UseZGC
---enable-preview
+-XX:+ZGenerational
+-XX:+UseStringDeduplication
